--- a/RoslynAvaloniaTask/RoslynAvaloniaTask.csproj
+++ b/RoslynAvaloniaTask/RoslynAvaloniaTask.csproj
@@ -15,11 +15,14 @@
 
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="11.0.10"/>
+        <PackageReference Include="Avalonia.AvaloniaEdit" Version="11.0.6" />
         <PackageReference Include="Avalonia.Desktop" Version="11.0.10"/>
         <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.10"/>
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
+        <PackageReference Include="AvaloniaEdit.TextMate" Version="11.0.6" />
+        <PackageReference Include="TextMateSharp.Grammars" Version="1.0.56" />
     </ItemGroup>
 </Project>
